--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
           DRONE TRACKING TECHNOLOGIES
         </h1>
         <h2 class="f3 mid-gray lh-title">
-          We are no longer accepting any speculative sales enquiries from the public.
+          We may not respond to speculative enquiries.
         </h2>
         <time class="f6 ttu tracked gray"></time>
       </header>
